<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:opencv="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CameraActivity">

    <org.opencv.android.JavaCameraView
        android:id="@+id/camera_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        opencv:camera_id="any"
        opencv:show_fps="true" />

    <View
        android:id="@+id/red"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true" />

    <ScrollView
        android:id="@+id/control_panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toRightOf="@id/red"
        android:background="#80000000"
        android:padding="20dp"
        android:scrollbars="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/blur_radius_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/blur_radius" />

            <SeekBar
                android:id="@+id/blur_radius_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="29"
                android:min="3"
                android:padding="5dp"
                android:progress="@integer/blur_radius_default" />

            <TextView
                android:id="@+id/color_area_min_radius_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/color_area_min_radius" />

            <SeekBar
                android:id="@+id/color_area_min_radius_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="50"
                android:min="2"
                android:padding="5dp"
                android:progress="@integer/min_radius_default" />

            <TextView
                android:id="@+id/color_area_max_radius_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/color_area_max_radius" />

            <SeekBar
                android:id="@+id/color_area_max_radius_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="500"
                android:min="50"
                android:padding="5dp"
                android:progress="@integer/max_radius_default" />

            <TextView
                android:id="@+id/exposure_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/exposure" />

            <SeekBar
                android:id="@+id/exposure_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:progress="0" />

            <TextView
                android:id="@+id/red_sensitivity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/red_sensitivity" />

            <SeekBar
                android:id="@+id/red_sensitivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp" />

            <TextView
                android:id="@+id/green_sensitivity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/green_sensitivity" />

            <SeekBar
                android:id="@+id/green_sensitivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp" />

            <TextView
                android:id="@+id/yellow_sensitivity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/yellow_sensitivity" />

            <SeekBar
                android:id="@+id/yellow_sensitivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp" />

            <CheckBox
                android:id="@+id/show_ignored_rect_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/show_ignored_rect" />
        </LinearLayout>
    </ScrollView>
    <!--<org.opencv.android.NativeCameraView-->
    <!--android:id="@+id/tutorial1_activity_native_surface_view"-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="fill_parent"-->
    <!--android:visibility="gone"-->
    <!--opencv:camera_id="any"-->
    <!--opencv:show_fps="true" />-->

</RelativeLayout>